--- a/pruebas_api.ipynb
+++ b/pruebas_api.ipynb
@@ -2,12 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv()"
+    "df = pd.read_csv('datasets/clean_movies_dataset.csv')\n",
+    "df2 = pd.read_csv('datasets/credits.csv', index_col= 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['belongs_to_collection', 'budget', 'genres', 'id', 'original_language',\n",
+       "       'overview', 'popularity', 'production_companies',\n",
+       "       'production_countries', 'release_date', 'revenue', 'runtime',\n",
+       "       'spoken_languages', 'status', 'tagline', 'title', 'vote_average',\n",
+       "       'vote_count', 'release_year', 'return'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
@@ -21,10 +47,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cantidad_filmaciones_mes(mes: str):\n",
+    "    mes = mes.lower()\n",
+    "    df.release_date = pd.to_datetime(df.release_date)\n",
+    "    def mes_a_numero (mes):\n",
+    "        meses = {\n",
+    "            'enero':1,'febrero':2,'marzo':3,'abril':4,\n",
+    "            'mayo':5,'junio':6,'julio':7,'agosto':8,\n",
+    "            'septiembre':9,'octubre':10,'noviembre':11,'diciembre':12\n",
+    "            }\n",
+    "        return meses[mes]\n",
+    "    cantidad = df.release_date.loc[df.release_date.dt.month == mes_a_numero(mes)].count()\n",
+    "    return f'{cantidad.item()} cantidad de películas fueron estrenadas en el mes de {mes}'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3032 cantidad de películas fueron estrenadas en el mes de febrero'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cantidad_filmaciones_mes('febrero')"
+   ]
   },
   {
    "attachments": {},
@@ -37,10 +104,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cantidad_filmaciones_dia(dia : str):\n",
+    "    dia = dia.lower()\n",
+    "    df.release_date = pd.to_datetime(df.release_date, errors= 'coerce')\n",
+    "    def dia_numero(dia_numero):\n",
+    "        dias = {'lunes' : 0,'martes' : 1, 'miercoles': 2, 'jueves':3, 'viernes':4, 'sabado':5, 'domingo':6}\n",
+    "        return dias[dia_numero]\n",
+    "    cantidad = df.release_date.loc[df.release_date.dt.weekday == dia_numero(dia)].count()\n",
+    "    return {'dia' : dia , 'cantidad' : cantidad.item()}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dia': 'lunes', 'cantidad': 3503}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cantidad_filmaciones_dia('lunes')"
+   ]
   },
   {
    "attachments": {},
@@ -53,10 +157,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def score_titulo(titulo_de_la_filmacion: str):\n",
+    "    titulo_de_la_filmacion = titulo_de_la_filmacion.lower()\n",
+    "    respuesta = df[['title','release_year','popularity']].loc[df.title.apply(lambda x : x.lower()) == titulo_de_la_filmacion]\n",
+    "    titulo = respuesta['title'].values[0]\n",
+    "    anio = respuesta['release_year'].values[0]\n",
+    "    popularidad = respuesta['popularity'].values[0]\n",
+    "    return f\"la pelicula {str(titulo)} fue estrenada en el año {str(anio)} con un score/popularidad de {str(popularidad)}\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'la pelicula Toy Story fue estrenada en el año 1995 con un score/popularidad de 21.946943'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_titulo('Toy Story')"
+   ]
   },
   {
    "attachments": {},
@@ -69,10 +209,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def votos_titulo(titulo_de_la_filmacion: str):\n",
+    "    titulo_de_la_filmacion = titulo_de_la_filmacion.lower()\n",
+    "    respuesta = df[['title','release_year','vote_count','vote_average']].loc[df.title.apply(lambda x : x.lower()) == titulo_de_la_filmacion]\n",
+    "    titulo = respuesta['title'].values[0]\n",
+    "    anio = respuesta['release_year'].values[0]\n",
+    "    cantidad_votos = respuesta['vote_count'].values[0]\n",
+    "    promedio_votos = respuesta['vote_average'].values[0]\n",
+    "    if respuesta['vote_count'].values[0] <2000:\n",
+    "        return f'La variable ingresada no cumple con la condición necesaria de tener más de 2000 valoraciones'\n",
+    "    else:\n",
+    "        return f\"la pelicula {str(titulo)} fue estrenada en el año {str(anio)}. La misma cuenta con {str(cantidad_votos)} votos con un promedio de {str(promedio_votos)}\"\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'la pelicula Toy Story fue estrenada en el año 1995. La misma cuenta con 5415 votos con un promedio de 7.7'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "votos_titulo('Toy Story')"
+   ]
   },
   {
    "attachments": {},
@@ -85,10 +265,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_actor(nombre_actor: str):\n",
+    "    return f'El actor {x} ha participado de {x} cantidad de filmaciones, el mismo ha conseguido un retorno de {x} con un promedio de {x} por filmacion'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "para este codigo necesito usar credits.csv, voy a revisarlo primero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"[{'credit_id': '52fe44bfc3a36847f80a7cd1', 'department': 'Production', 'gender': 2, 'id': 511, 'job': 'Executive Producer', 'name': 'Larry J. Franco', 'profile_path': None}, {'credit_id': '52fe44bfc3a36847f80a7c89', 'department': 'Writing', 'gender': 2, 'id': 876, 'job': 'Screenplay', 'name': 'Jonathan Hensleigh', 'profile_path': '/l1c4UFD3g0HVWj5f0CxXAvMAGiT.jpg'}, {'credit_id': '52fe44bfc3a36847f80a7cdd', 'department': 'Sound', 'gender': 2, 'id': 1729, 'job': 'Original Music Composer', 'name': 'James Horner', 'profile_path': '/oLOtXxXsYk8X4qq0ud4xVypXudi.jpg'}, {'credit_id': '52fe44bfc3a36847f80a7c7d', 'department': 'Directing', 'gender': 2, 'id': 4945, 'job': 'Director', 'name': 'Joe Johnston', 'profile_path': '/fok4jaO62v5IP6hkpaaAcXuw2H.jpg'}, {'credit_id': '52fe44bfc3a36847f80a7cd7', 'department': 'Editing', 'gender': 2, 'id': 4951, 'job': 'Editor', 'name': 'Robert Dalva', 'profile_path': None}, {'credit_id': '573523bec3a368025100062c', 'department': 'Production', 'gender': 0, 'id': 4952, 'job': 'Casting', 'name': 'Nancy Foy', 'profile_path': '/blCkmS4dqNsbPGuQfozHE6wgWBw.jpg'}, {'credit_id': '5722a924c3a3682d1e000b41', 'department': 'Visual Effects', 'gender': 0, 'id': 8023, 'job': 'Animation Supervisor', 'name': 'Kyle Balda', 'profile_path': '/jR8iAP6uC0V42KbUG87qBIUO3Hj.jpg'}, {'credit_id': '52fe44c0c3a36847f80a7ce3', 'department': 'Art', 'gender': 2, 'id': 9967, 'job': 'Production Design', 'name': 'James D. Bissell', 'profile_path': None}, {'credit_id': '52fe44bfc3a36847f80a7cb9', 'department': 'Production', 'gender': 2, 'id': 9184, 'job': 'Producer', 'name': 'Scott Kroopf', 'profile_path': None}, {'credit_id': '52fe44bfc3a36847f80a7ccb', 'department': 'Production', 'gender': 2, 'id': 9196, 'job': 'Executive Producer', 'name': 'Ted Field', 'profile_path': '/qmB7sZcgRUq7mRFBSTlSsVXh7sH.jpg'}, {'credit_id': '52fe44bfc3a36847f80a7cc5', 'department': 'Production', 'gender': 2, 'id': 18389, 'job': 'Executive Producer', 'name': 'Robert W. Cort', 'profile_path': None}, {'credit_id': '52fe44bfc3a36847f80a7cbf', 'department': 'Camera', 'gender': 2, 'id': 11371, 'job': 'Director of Photography', 'name': 'Thomas E. Ackerman', 'profile_path': '/xFDbxk53icM1ofL4iCIwB4GkUxN.jpg'}, {'credit_id': '52fe44bfc3a36847f80a7c83', 'department': 'Writing', 'gender': 2, 'id': 42356, 'job': 'Novel', 'name': 'Chris van Allsburg', 'profile_path': None}, {'credit_id': '52fe44bfc3a36847f80a7cb3', 'department': 'Production', 'gender': 2, 'id': 42357, 'job': 'Producer', 'name': 'William Teitler', 'profile_path': None}, {'credit_id': '52fe44bfc3a36847f80a7c8f', 'department': 'Writing', 'gender': 2, 'id': 56520, 'job': 'Screenplay', 'name': 'Greg Taylor', 'profile_path': None}, {'credit_id': '52fe44bfc3a36847f80a7c95', 'department': 'Writing', 'gender': 2, 'id': 56521, 'job': 'Screenplay', 'name': 'Jim Strain', 'profile_path': None}]\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.crew[1]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_actor() missing 1 required positional argument: 'nombre_actor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\USER\\Desktop\\repositorios\\PI_ML_OPS\\pruebas_api.ipynb Cell 24\u001b[0m in \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/USER/Desktop/repositorios/PI_ML_OPS/pruebas_api.ipynb#X32sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m get_actor()\n",
+      "\u001b[1;31mTypeError\u001b[0m: get_actor() missing 1 required positional argument: 'nombre_actor'"
+     ]
+    }
+   ],
+   "source": [
+    "get_actor()"
+   ]
   },
   {
    "attachments": {},
@@ -103,12 +343,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_director(nombre_director: str):\n",
+    "    return None"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_director()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
