--- a/pruebas_credits.ipynb
+++ b/pruebas_credits.ipynb
@@ -7,20 +7,150 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import ast\n",
-    "import pyarrow as pa\n",
-    "import pyarrow.parquet as pq"
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 275,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cast</th>\n",
+       "      <th>crew</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[{'cast_id': 14, 'character': 'Woody (voice)',...</td>\n",
+       "      <td>[{'credit_id': '52fe4284c3a36847f8024f49', 'de...</td>\n",
+       "      <td>862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[{'cast_id': 1, 'character': 'Alan Parrish', '...</td>\n",
+       "      <td>[{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...</td>\n",
+       "      <td>8844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[{'cast_id': 2, 'character': 'Max Goldman', 'c...</td>\n",
+       "      <td>[{'credit_id': '52fe466a9251416c75077a89', 'de...</td>\n",
+       "      <td>15602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[{'cast_id': 1, 'character': \"Savannah 'Vannah...</td>\n",
+       "      <td>[{'credit_id': '52fe44779251416c91011acb', 'de...</td>\n",
+       "      <td>31357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[{'cast_id': 1, 'character': 'George Banks', '...</td>\n",
+       "      <td>[{'credit_id': '52fe44959251416c75039ed7', 'de...</td>\n",
+       "      <td>11862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45471</th>\n",
+       "      <td>[{'cast_id': 0, 'character': '', 'credit_id': ...</td>\n",
+       "      <td>[{'credit_id': '5894a97d925141426c00818c', 'de...</td>\n",
+       "      <td>439050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45472</th>\n",
+       "      <td>[{'cast_id': 1002, 'character': 'Sister Angela...</td>\n",
+       "      <td>[{'credit_id': '52fe4af1c3a36847f81e9b15', 'de...</td>\n",
+       "      <td>111109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45473</th>\n",
+       "      <td>[{'cast_id': 6, 'character': 'Emily Shaw', 'cr...</td>\n",
+       "      <td>[{'credit_id': '52fe4776c3a368484e0c8387', 'de...</td>\n",
+       "      <td>67758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45474</th>\n",
+       "      <td>[{'cast_id': 2, 'character': '', 'credit_id': ...</td>\n",
+       "      <td>[{'credit_id': '533bccebc3a36844cf0011a7', 'de...</td>\n",
+       "      <td>227506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45475</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'credit_id': '593e676c92514105b702e68e', 'de...</td>\n",
+       "      <td>461257</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45476 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    cast   \n",
+       "0      [{'cast_id': 14, 'character': 'Woody (voice)',...  \\\n",
+       "1      [{'cast_id': 1, 'character': 'Alan Parrish', '...   \n",
+       "2      [{'cast_id': 2, 'character': 'Max Goldman', 'c...   \n",
+       "3      [{'cast_id': 1, 'character': \"Savannah 'Vannah...   \n",
+       "4      [{'cast_id': 1, 'character': 'George Banks', '...   \n",
+       "...                                                  ...   \n",
+       "45471  [{'cast_id': 0, 'character': '', 'credit_id': ...   \n",
+       "45472  [{'cast_id': 1002, 'character': 'Sister Angela...   \n",
+       "45473  [{'cast_id': 6, 'character': 'Emily Shaw', 'cr...   \n",
+       "45474  [{'cast_id': 2, 'character': '', 'credit_id': ...   \n",
+       "45475                                                 []   \n",
+       "\n",
+       "                                                    crew      id  \n",
+       "0      [{'credit_id': '52fe4284c3a36847f8024f49', 'de...     862  \n",
+       "1      [{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...    8844  \n",
+       "2      [{'credit_id': '52fe466a9251416c75077a89', 'de...   15602  \n",
+       "3      [{'credit_id': '52fe44779251416c91011acb', 'de...   31357  \n",
+       "4      [{'credit_id': '52fe44959251416c75039ed7', 'de...   11862  \n",
+       "...                                                  ...     ...  \n",
+       "45471  [{'credit_id': '5894a97d925141426c00818c', 'de...  439050  \n",
+       "45472  [{'credit_id': '52fe4af1c3a36847f81e9b15', 'de...  111109  \n",
+       "45473  [{'credit_id': '52fe4776c3a368484e0c8387', 'de...   67758  \n",
+       "45474  [{'credit_id': '533bccebc3a36844cf0011a7', 'de...  227506  \n",
+       "45475  [{'credit_id': '593e676c92514105b702e68e', 'de...  461257  \n",
+       "\n",
+       "[45476 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv('datasets/credits.csv')\n",
-    "table = pa.Table.from_pandas(df)\n",
-    "pq.write_table(table, 'credits.parquet')"
+    "df = pd.read_parquet('datasets/credits.parquet')\n",
+    "df\n"
    ]
   },
   {
@@ -187,6 +317,13 @@
     "                            }\n",
     "                        df_conteo.loc[len(df_conteo)] = nueva_fila"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
