--- a/pruebas_api.ipynb
+++ b/pruebas_api.ipynb
@@ -491,9 +491,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Una vez que toda la data es consumible por la API, está lista para consumir por los departamentos de Analytics y Machine Learning, y nuestro EDA nos permite entender bien los datos a los que tenemos acceso, es hora de entrenar nuestro modelo de machine learning para armar un sistema de recomendación de películas. El EDA debería incluir gráficas interesantes para extraer datos, como por ejemplo una nube de palabras con las palabras más frecuentes en los títulos de las películas. Éste consiste en recomendar películas a los usuarios basándose en películas similares, por lo que se debe encontrar la similitud de puntuación entre esa película y el resto de películas, se ordenarán según el score de similaridad y devolverá una lista de Python con 5 valores, cada uno siendo el string del nombre de las películas con mayor puntaje, en orden descendente. Debe ser deployado como una función adicional de la API anterior y debe llamarse:\n",
     "\n",
-    "# ML\n",
+    "def recomendacion( titulo ): Se ingresa el nombre de una película y te recomienda las similares en una lista de 5 valores.\n",
     "@app.get('/recomendacion/{titulo}')\n",
+    "def recomendacion(titulo:str):\n",
+    "    '''Ingresas un nombre de pelicula y te recomienda las similares en una lista'''\n",
+    "    return {'lista recomendada': respuesta}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def recomendacion(titulo:str):\n",
     "    '''Ingresas un nombre de pelicula y te recomienda las similares en una lista'''\n",
     "    return {'lista recomendada': respuesta}"
